Fix a bug with profile selector not aligned properly

--- a/static/source/less/screens/settings.less
+++ b/static/source/less/screens/settings.less
@@ -213,9 +213,12 @@
 }
 
 .profile-selector-container {
-    // position: relative;
-    // top: -4rem;
     float: right;
+}
+
+.profile-selector-container .dropdown-menu {
+    left: auto;
+    right: 0;
 }
 
 .profile-selector-container .btn {
